--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -47,7 +47,7 @@
     <string name="action_settings" context="Menu item">Nastavení</string>
     <string name="action_search" context="Search button">Hledat</string>
     <string name="action_refresh" context="Menu item">Obnovit</string>
-    <string name="action_sort_by" context="Menu item">Sort by</string>
+    <string name="action_sort_by" context="Menu item">Seřadit podle...</string>
     <string name="action_help" context="Menu item">Nápověda</string>
     <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgradujte účet</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">Vybrat vše</string>
@@ -139,7 +139,7 @@
     
     <string name="create_account_confirm_title" context="Title that is shown when e-mail confirmation is still required for the account">Vyžadováno potvrzení</string>
     <string name="create_account_confirm" context="">Zkontrolujte svůj e-mail a klikněte na odkaz pro přihlášení a potvrzení svého účtu</string>
-    <string name="create_account_creating_account">[$2243]</string>
+    <string name="create_account_creating_account">Připojování k serveru: vytváření účtu</string>
 
     <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">Uloženo offline</string>
