--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -403,6 +403,7 @@
     </string-array>
     
     <string name="settings_camera_upload_charging" context="Option to choose that the camera sync will only be enable when the device is charging">Only when charging</string>
+    <string name="settings_keep_file_names" context="Option to choose that the camera sync will maintain the local file names when uploading">Keep file names as in the device</string>
     
     <string name="settings_local_camera_upload_folder" context="The location of where the user photos or videos are stored.">Local Camera folder</string>
     <string name="settings_mega_camera_upload_folder" context="The location of where the user photos or videos are stored.">Mega Camera Uploads Folder</string>
