--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -47,7 +47,7 @@
     <string name="action_settings" context="Menu item">설정</string>
     <string name="action_search" context="Search button">검색</string>
     <string name="action_refresh" context="Menu item">새로 고침</string>
-    <string name="action_sort_by" context="Menu item">Sort by</string>
+    <string name="action_sort_by" context="Menu item">정렬 기준</string>
     <string name="action_help" context="Menu item">도움말</string>
     <string name="action_upgrade_account" context="Change from a free account to paying MEGA">계정 업그레이드</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">모두 선택</string>
@@ -80,7 +80,7 @@
     
     <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
         <item quantity="one" context="Item menu option upon clicking on one or multiple files. Singular">다운로드</item>
-        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">[$2222]</item>
+        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">다운로드</item>
     </plurals>
     
     <plurals name="general_num_uploads">
@@ -132,7 +132,7 @@
     
     <string name="create_account_confirm_title" context="Title that is shown when e-mail confirmation is still required for the account">확인이 필요함</string>
     <string name="create_account_confirm" context="">이메일을 확인하시고 링크를 클릭하여 로그인하고 계정을 확인하시기 바랍니다.</string>
-    <string name="create_account_creating_account">[$2243]</string>
+    <string name="create_account_creating_account">서버에 연결중: 계정 생성중</string>
 
     <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">오프라인으로 저장됨</string>
