--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -47,7 +47,7 @@
     <string name="action_settings" context="Menu item">Ustawienia</string>
     <string name="action_search" context="Search button">Szukaj</string>
     <string name="action_refresh" context="Menu item">Odśwież</string>
-    <string name="action_sort_by" context="Menu item">Sort by</string>
+    <string name="action_sort_by" context="Menu item">Sortuj wg</string>
     <string name="action_help" context="Menu item">Pomoc</string>
     <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Zmień konto</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">Wybierz wszystkie</string>
@@ -146,7 +146,7 @@
     
     <string name="create_account_confirm_title" context="Title that is shown when e-mail confirmation is still required for the account">Wymagana weryfikacja</string>
     <string name="create_account_confirm" context="">Sprawdź swoją skrzynkę e-mail i kliknij w link aby się zalogować i potwierdzić rejestrację</string>
-    <string name="create_account_creating_account">[$2243]</string>
+    <string name="create_account_creating_account">Łączenie z serwerem: tworzenie konta</string>
 
     <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">Zapisane offline</string>
