--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -241,8 +241,9 @@
     <string name="context_creating_folder" context="status">Creando carpeta...</string>
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Añadiendo contacto</string>
     <string name="context_download_to" context="Menu item">Guardar en</string>
-    <string name="context_clear_rubbish" context="Menu option">Vaciar la Papelera</string>
+    <string name="context_clear_rubbish" context="Menu option">Vaciar la Papelera</string>    
     <string name="context_send_link" context="get the link and send it">Enviar enlace</string>
+    <string name="context_send_file_inbox" context="send the file to inbox">Enviar al buzón</string>
     <string name="context_copy_link" context="get the link and copy it">Copiar enlace</string>
     <string name="context_remove" context="Menu option to delete one or multiple selected items.">Eliminar</string>
     <string name="context_share_folder" context="menu item">Compartir carpeta</string>
@@ -266,6 +267,8 @@
     <string name="context_correctly_renamed" context="success message when renaming a node">Renombrado correctamente</string>
     <string name="context_no_renamed" context="error message">Error. No se pudo renombrar</string>
     <string name="context_correctly_copied" context="success message when copying a node">Copiado correctamente</string>
+    <string name="context_correctly_sent" context="success message when sending a file">Fichero enviado correctamente</string>
+    <string name="context_no_sent" context="error message when sending a file">Error. No se pudo enviar</string>
     <string name="context_no_copied" context="error message">Error. No se pudo copiar</string>
     <string name="context_correctly_moved" context="success message when moving a node">Movido correctamente</string>
     <string name="context_no_moved" context="error message">Error. No se pudo mover</string>
