--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -259,6 +259,7 @@
     <string name="context_download_to" context="Menu item">Save to</string>
     <string name="context_clear_rubbish" context="Menu option">Clear Rubbish Bin</string>
     <string name="context_send_link" context="get the link and send it">Send link</string>
+    <string name="context_send_file_inbox" context="send the file to inbox">Send to Inbox</string>
     <string name="context_copy_link" context="get the link and copy it">Copy link</string>
     <string name="context_remove" context="Menu option to delete one or multiple selected items.">Remove</string>
     <string name="context_share_folder" context="menu item">Share folder</string>
@@ -281,6 +282,8 @@
     <string name="context_correctly_renamed" context="success message when renaming a node">Correctly renamed</string>
     <string name="context_no_renamed" context="error message">Error. Not renamed</string>
     <string name="context_correctly_copied" context="success message when copying a node">Correctly copied</string>
+    <string name="context_correctly_sent" context="success message when sending a file">File correctly sent</string>
+    <string name="context_no_sent" context="error message when sending a file">Error. File not sent</string>
     <string name="context_no_copied" context="error message">Error. Not copied</string>
     <string name="context_correctly_moved" context="success message when moving a node">Correctly moved</string>
     <string name="context_no_moved" context="error message">Error. Not moved</string>
