--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name" context="Not translate">MEGA</string>
-    <string name="app_version" context="Not translate">2.3</string>
+    <string name="app_version" context="Not translate">2.3.1</string>
     
     <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA הינו שירות אחסון בענן בעל פרטיות מושלמת. 50 ג\'יגה בייט בחינם.</string>
@@ -162,7 +162,7 @@
 
 	<string name="section_account" context="button to the settings of the user\'s account">החשבון שלי</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">העלאות מצלמה</string>
-	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s מתוך %2$s</string>
+	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s %2$s מתוך</string>
 	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">נכנס</string>
 	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">יוצא</string>
 	
