--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" context="Not translate">MEGA_COM</string>
-    <string name="app_version" context="Not translate">2.3</string>
+    <string name="app_name" context="Not translate">MEGA</string>
+    <string name="app_version" context="Not translate">2.3.1</string>
     
     <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">будет доступно через</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA - это облачное хранилище данных с мощным и постоянно включенным режимом конфиденциальности. 50 ГБ дискового пространства бесплатно</string>
