FEature #2265 - DROPBOX2MEGA: Upload imported files

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -359,6 +359,10 @@
     <string name="settings_camera_notif_error" context="notification error">Existe un problema con las subidas de la Cámara</string>
     <string name="settings_camera_notif_complete" context="notification camera uploads complete">Subidas de la Cámara completadas</string>
     
+    <string name="dropbox_import_notif_title" context="title of the notification when importing from Dropbox">Importando ficheros de Dropbox</string>
+    <string name="dropbox_import_notif_complete" context="notification import from Dropbox complete">Ficheros de Dropbox importados correctamente</string>
+    <string name="dropbox_import_notif_error" context="notification error">Existe un problema con la importación desde Dropbox</string>
+    
     <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Almacenamiento</string>
     <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">Bloqueo PIN</string>
     
